Fixed overflow on index and links in small screen

--- a/main/static/src/css/_partials/footer.less
+++ b/main/static/src/css/_partials/footer.less
@@ -12,10 +12,6 @@
 	top: 50%;
 	.translateY(-50%);
 	width: 100%;
-	@media screen and (max-width: 640px){
-		left: 50%;
-		.translateX(-50%);
-	}
 	.footer-link {
 		.transition(all, 0.3s, ease-in);
 		height: 30px;
@@ -25,12 +21,6 @@
 		position: relative;
 		margin-right: 30px;
 		color: @black-40;
-		@media screen and (max-width: 640px){
-		    width: 20px;
-		    height: 20px;
-		    line-height: 20px;
-		    font-size: 2em;
-		}
 		&:hover {
 			color: @black-60;
 		}
@@ -46,10 +36,6 @@
 	clear: both;
 	padding: 0 4em;
 	background-color: #fefefe;
-	@media screen and (max-width: 640px){
-		padding: 0 2em;
-	    
-	}
 	p {
 		display: block;
 		line-height: 60px;
