--- a/main/static/src/css/main.less
+++ b/main/static/src/css/main.less
@@ -70,7 +70,7 @@ a:active {
 }
 
 a {
-	.transition(all, 0.1s, ease-in);
+	.transition(color, 0.1s, ease-in);
 }
 
 #wrap {
@@ -78,6 +78,10 @@ a {
 	height: 100%;
 	height: auto !important;
 	margin: 0 auto -60px;
+}
+
+.article-list {
+	overflow-x: hidden;
 }
 
 .text-warning{
